@@ -169,7 +169,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">_Group</property>
+                    <property name="label" translatable="yes">_Group:</property>
                     <property name="use_underline">True</property>
                   </object>
                   <packing>
